Upgrade Main.java to Java 21 features